# Friend-orbit-

./: .replit  design_guidelines.json  pyproject.toml  replit.md
backend/: .env.example  requirements.txt  server.py
frontend/: craco.config.js  package-lock.json  package.json  tailwind.config.js
frontend/public/: index.html
frontend/src/: App.js  index.css
frontend/src/components/: AddPlanetForm.jsx  AddPlanetModal.jsx  BatteryWidget.jsx  BottomDock.jsx  UniverseMap.jsx
frontend/src/pages/: PersonProfile.jsx  Settings.jsx  Setup.jsx  Universe.jsx
memory/: PRD.md
test_reports/: iteration_1.json  iteration_2.json
