[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "apscheduler>=3.11.2",
    "asyncpg>=0.31.0",
    "databases>=0.9.0",
    "fastapi>=0.128.1",
    "httpx>=0.28.1",
    "motor>=3.7.1",
    "pydantic>=2.12.5",
    "pymongo>=4.16.0",
    "python-dotenv>=1.2.1",
    "pytz>=2025.2",
    "uvicorn>=0.40.0",
]
